# AlignmentLab

./: .gitignore  LICENSE  PLAN.md  README.md  prajna_gpu_inventory.md  pyproject.toml
configs/: cluster.h200.yaml  cluster.yaml
configs/grpo/: llama31-8b_grpo_math_4gpu_kl01.yaml  q3-8b_grpo_math.yaml  q3-8b_grpo_math_1gpu_h200_kl01.yaml  q3-8b_grpo_math_2gpu_h200_kl01.yaml  q3-8b_grpo_math_4gpu_kl01.yaml  q3-8b_grpo_math_4gpu_test.yaml  q3-8b_grpo_math_5gpu_h200_kl01.yaml  q3-8b_grpo_math_5gpu_kl01.yaml  q3-8b_grpo_math_6gpu.yaml  q3-8b_grpo_math_6gpu_kl01.yaml
configs/sft/: llama31-8b_sft_tulu.yaml  q3-0.6b_sft_smoke.yaml  q3-8b_sft_tulu.yaml
docs/: EXPERIMENT_CARD.template.md  HANDOFF_H200_2GPU.md  HANDOFF_PRAJNA.md  RUNBOOK.md  experiment_cards.md  h200_gt_kl01_status.md  h200_operator_status.md  implementation_notes.md  rq1_findings.md  rq1_validity.md
envs/: alab-eval.yml  alab-rl.yml  alab-sft.yml
prompts/: TRACK_A_SONNET.md  TRACK_B_CODEX.md  TRACK_B_PHASE1p5.md  TRACK_C_GLM.md
results/: summary.csv
scripts/: alab  collect_results.py  fetch_hub_ckpt.sh  plot_arms.py  submit_download.sh  submit_eval.sh  submit_sft.sh
scripts/local/: ray_launch.sh
scripts/lsf/: cpu_job.template.bsub  env.sh  gpu_job.template.bsub  gt_completion_pipeline.sh  monitor_gt_job.sh  ray_lsf_launch.sh  submit_flash_attn_build.sh
scripts/remote/: bootstrap.sh  config.sh  job.sh  status.sh  sync.sh
src/data/: download.py  preprocess.py
src/evals/: common.py  passk_generate.py  passk_score.py  run_lm_eval.py
src/rl/: reward.py  train_grpo.py
tests/: test_reward.py
(+13 files in other folders)
